[tool.poetry]
name = "hpc-interact"
version = "0.1.0"
description = "Used for file transfer and sending predefined commands to an hpc cluster"
authors = ["Sam Kunkleman <skunklem@uncc.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hpc_interact"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
